--- a/css/styles.css
+++ b/css/styles.css
@@ -19,14 +19,15 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
-    padding: 20px 0;
+    padding: 20px;
     background: transparent;
     transition: background 0.3s;
+    border-bottom: 1px solid white;
 }
 
 #navbar ul {
     display: flex;
-    justify-content: center;
+    justify-content: right;
     list-style: none;
 }
 
@@ -42,7 +43,7 @@ header {
 }
 
 #navbar.scrolled {
-    background: rgba(0, 0, 0, 0.9);
+    background: rgba(0, 0, 0, 0.9) !important;
 }
 
 #navbar ul li a:hover {
