--- a/css/styles.css
+++ b/css/styles.css
@@ -23,25 +23,35 @@ body {
     padding: 10px 0;
 }
 
-.navbar-toggler-icon.scrolled {
-    color: darkslategrey;
-}
-
 #navbar .nav-link {
     color: white !important;
 }
 
 /* Hero Section */
 .hero {
+    position: relative;
+    width: 100%;
     height: 100vh;
-    overflow: hidden;
-    background: #000;
+    background-image: url('../images/studio-purple-lighting.webp');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
-.hero img {
+.hero::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    background-color: rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.hero-content {
+    position: relative;
+    z-index: 2;
 }
 
 /* About Me Section */
@@ -55,8 +65,19 @@ body {
 }
 
 /* Shows Section */
+.show {
+    height: 100vh;
+    overflow: hidden;
+}
+
+.show img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 #shows {
-    background-image: url('../images/studio-green-lighting.webp');
+    background-image: linear-gradient(rgba(5, 27, 136, 0.2), rgba(5, 27, 136, 0.2)), url('../images/records.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -69,6 +90,11 @@ body {
 
 #shows .card:hover {
     transform: scale(1.05);
+}
+
+#shows .card-img-top {
+    height: 200px;
+    object-fit: cover;
 }
 
 /* Contact Section */
