--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,21 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Roboto", sans-serif;
+}
+
+h1 {
+    font-family: "New Amsterdam", sans-serif;
+    font-size: 80px;
+}
+
+h2 {
+    font-family: "New Amsterdam", sans-serif;
+    font-size: 50px;
+}
+
+p {
+    text-align: justify;
 }
 
 /* Navbar */
@@ -61,20 +75,12 @@ body {
 
 #about img {
     max-width: 80%;
+    box-shadow: 
+        0 4px 8px rgba(0, 0, 0, 0.8), /* Shadow on bottom-right */
+        0 -1px 2px rgba(0, 0, 0, 0.3); /* Light shadow on top */
 }
 
 /* Shows Section */
-.show {
-    height: auto;
-    padding: 20px 0;
-}
-
-.show img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
 #shows {
     background-image: linear-gradient(rgba(0, 7, 62, 0.4), rgba(0, 7, 62, 0.4)), url('../images/records.webp');
     background-size: cover;
@@ -85,36 +91,22 @@ body {
 #shows .card {
     border: none;
     transition: transform 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    height: 350px;
 }
 
 #shows .card:hover {
     transform: scale(1.05);
 }
 
-.row {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.col-md-4 {
-    display: flex;
-    flex-direction: column;
-}
-
-.card {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-}
-
-.card-img-container {
+#shows .card-img-container {
     flex: 2;
-    height: 100%;
-    height: 200px;
+    height: 70%;
     overflow: hidden;
 }
 
-.card-img-top {
+#shows .card-img-top {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -125,17 +117,19 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 30%;
 }
 
 .audio-visualizer video {
     width: 100%;
-    height: auto;
+    height: 100%;
     object-fit: cover;
 }
 
 /* Contact Section */
-#contact {
-    background-color: #f8f9fa;
+.purple-mic {
+    max-width: 80%;
+    max-height: 80%;
 }
 
 /* Custom Media Queries */
