--- a/css/styles.css
+++ b/css/styles.css
@@ -11,12 +11,12 @@ body {
 
 h1 {
     font-family: "New Amsterdam", sans-serif;
-    font-size: 80px;
+    font-size: 100px;
 }
 
 h2 {
     font-family: "New Amsterdam", sans-serif;
-    font-size: 50px;
+    font-size: 60px;
 }
 
 p {
@@ -30,6 +30,7 @@ p {
 
 .navbar-brand {
     color: white !important;
+    font-size: 30px;
 }
 
 #navbar.navbar-dark {
@@ -39,6 +40,15 @@ p {
 
 #navbar .nav-link {
     color: white !important;
+    font-size: 25px;
+    position: relative;
+    padding-right: 30px;
+}
+
+.navbar-nav .nav-item:not(:last-child) .nav-link::after {
+    content: '|';
+    position: absolute;
+    right: 10px;
 }
 
 /* Hero Section */
@@ -127,14 +137,44 @@ p {
 }
 
 /* Contact Section */
-.purple-mic {
+.contact-img {
     max-width: 80%;
     max-height: 80%;
+    box-shadow: 
+        0 4px 8px rgba(0, 0, 0, 0.8), /* Shadow on bottom-right */
+        0 -1px 2px rgba(0, 0, 0, 0.3); /* Light shadow on top */
+}
+
+.contact-form {
+    max-width: 500px;
+}
+
+/* Footer */
+footer p {
+    font-size: 20px;
+    margin-top: 20px;
+}
+
+.social-icon i {
+    color: white;
+    font-size: 35px;
 }
 
 /* Custom Media Queries */
 @media (max-width: 768px) {
     #navbar {
         padding: 10px 0;
+    }
+    .navbar-nav .nav-item .nav-link::after {
+        content: '';
+    }
+    .navbar-collapse {
+        width: 100%;
+    }
+    .navbar-nav {
+        text-align: right;
+    }
+    .navbar-nav .nav-item {
+        display: block;
     }
 }
