--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,8 @@ p {
     display: flex;
     flex-direction: column;
     height: 350px;
+    position: relative;
+    overflow: hidden; 
 }
 
 #shows .card:hover {
@@ -114,6 +116,7 @@ p {
     flex: 2;
     height: 70%;
     overflow: hidden;
+    position: relative;
 }
 
 #shows .card-img-top {
@@ -121,6 +124,28 @@ p {
     height: 100%;
     object-fit: cover;
 }
+
+.card-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    text-align: center;
+    font-size: 18px;
+    color: white;
+}
+
+.card:hover .card-overlay {
+    opacity: 1;
+}
+
 
 .audio-visualizer {
     flex: 1;
@@ -150,14 +175,9 @@ p {
 }
 
 /* Footer */
-footer p {
-    font-size: 20px;
-    margin-top: 20px;
-}
-
 .social-icon i {
     color: white;
-    font-size: 35px;
+    font-size: 30px;
 }
 
 /* Custom Media Queries */
@@ -165,8 +185,8 @@ footer p {
     #navbar {
         padding: 10px 0;
     }
-    .navbar-nav .nav-item .nav-link::after {
-        content: '';
+    .navbar-nav .nav-item:not(:last-child) .nav-link::after {
+        content: none;
     }
     .navbar-collapse {
         width: 100%;
