--- a/css/styles.css
+++ b/css/styles.css
@@ -170,8 +170,9 @@ p {
         0 -1px 2px rgba(0, 0, 0, 0.3); /* Light shadow on top */
 }
 
-.contact-form {
-    max-width: 500px;
+form {
+    max-width: 80%;
+    margin: auto;
 }
 
 /* Footer */
