--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,9 @@ p {
 #shows .card-img-top {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
+    background-color: black;
+    padding-top: 15px;
 }
 
 .card-overlay {
