--- a/css/styles.css
+++ b/css/styles.css
@@ -155,13 +155,10 @@ p {
     align-items: center;
     justify-content: center;
     height: 10%;
+    object-fit: cover;
+    background-color: black;
 }
 
-.audio-visualizer video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
 
 /* Contact Section */
 .contact-img {
