--- a/css/styles.css
+++ b/css/styles.css
@@ -148,17 +148,19 @@ p {
     opacity: 1;
 }
 
-
 .audio-visualizer {
     flex: 1;
     display: flex;
     align-items: center;
     justify-content: center;
     height: 10%;
-    object-fit: cover;
-    background-color: black;
 }
 
+.audio-visualizer video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
 /* Contact Section */
 .contact-img {
