--- a/css/styles.css
+++ b/css/styles.css
@@ -98,12 +98,21 @@ p {
     background-repeat: no-repeat;
 }
 
+#shows .row {
+    justify-content: center;
+}
+
+#shows .show {
+    margin: 0 auto;
+}
+
 #shows .card {
     border: none;
     transition: transform 0.3s ease;
     display: flex;
     flex-direction: column;
-    height: 350px;
+    height: 25rem;
+    width: 23.5rem;
     position: relative;
     overflow: hidden; 
 }
@@ -113,18 +122,15 @@ p {
 }
 
 #shows .card-img-container {
-    flex: 5;
-    height: 90%;
     overflow: hidden;
-    position: relative;
 }
 
 #shows .card-img-top {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
     background-color: black;
-    padding-top: 15px;
+    padding-bottom: 3px;
 }
 
 .card-overlay {
@@ -158,7 +164,7 @@ p {
 
 .audio-visualizer video {
     width: 100%;
-    height: 100%;
+    height: 180%;
     object-fit: cover;
 }
 
@@ -183,7 +189,38 @@ form {
 }
 
 /* Custom Media Queries */
+@media (max-width: 1399px) {
+    #shows .card {
+        height: 22rem;
+        width: 20.5rem;
+    }
+}
+
+@media (max-width: 1199px) {
+    #shows .card {
+        height: 20rem;
+        width: 18.5rem;
+    }
+    .show {
+        padding: 4px 2px;
+    }
+}
+
+@media (max-width: 991px) {
+    #shows .card {
+        height: 16rem;
+        width: 14rem;
+    }
+    .show {
+        padding: 4px 2px;
+    }
+}
+
 @media (max-width: 768px) {
+    #shows .card {
+        height: 20rem;
+        width: 18.5rem;
+    }
     #navbar {
         padding: 10px 0;
     }
