updating audio visualiser sample

--- a/css/styles.css
+++ b/css/styles.css
@@ -160,6 +160,22 @@ p {
     background-color: black;
 }
 
+.audio {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+
+.audio video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .audio-visualizer video {
     width: 100%;
     height: 180%;
